# vercel

./: .gitignore  Cargo.toml  README.md
.idx/: dev.nix
trash/: CRATE_README.md  Cargo.toml  WARNING.md  build.md  build.rs  build.txt  c_benchmark  cpp_benchmark  lib.md  lib.rs  main  main.c  main.py  main.rs  main.txt  main.zig  page.tsx  reader.zig  release.txt
trash/biome_test/: README.md  package.json
trash/cli/: autocompletion.rs  config.rs  enum_support.rs  error.rs  formatter.rs  list_option.rs  mod.rs  parser.rs  type_aliases.rs  utils.rs  validator.rs
trash/cli/input/: action.rs  mod.rs  test.rs
trash/cli/prompts/: action.rs  mod.rs  one_liners.rs  prompt.rs  test.rs
trash/cli/prompts/confirm/: action.rs  mod.rs  test.rs
trash/cli/prompts/custom_type/: action.rs  config.rs  mod.rs  prompt.rs
trash/cli/prompts/multiselect/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
trash/cli/prompts/select/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
trash/cli/prompts/text/: action.rs  config.rs  mod.rs  prompt.rs  test.rs
trash/cli/terminal/: console.rs  crossterm.rs  mod.rs  termion.rs  test.rs
trash/cli/ui/: backend.rs  frame_renderer.rs  input_reader.rs
trash/cli/ui/api/: render_config.rs
trash/forge/: mod.rs
trash/generator/: file_creator.h  generator.zig  mod.rs
trash/hello_world_zig/: build.zig  build.zig.zon  main
trash/manfromexistence-ui/: README.md  package.json  pnpm-lock.yaml
trash/manfromexistence-ui/apps/www/: package.json  types.ts
trash/manfromexistence-ui/apps/www/__registry__/: index.tsx
trash/manfromexistence-ui/apps/www/actions/: edit-in-v0.ts
trash/manfromexistence-ui/integration/: integration.md
trash/manfromexistence-ui/integration/Prismui/: .env.example  .gitignore  PRISMUI-GUIDE.mdx  README.md  content-collections.config.ts  content-collections.ts  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
trash/manfromexistence-ui/integration/github/: README.md  bun.lockb  index.ts  package.json
trash/manfromexistence-ui/integration/icon-sets/: bun.lockb
trash/manfromexistence-ui/integration/icones/: README.md  index.html  package.json
trash/manfromexistence-ui/integration/iconify/: pnpm-lock.yaml
trash/manfromexistence-ui/templates/: cards.mdx  signature-input.mdx
trash/src/: intro.rs  table.rs
trash/src/generator/: file_creator.c
trash/src/observer/: mod.rs
trash/src/prompts/: mod.rs
trash/src/ui/api/: render_config.rs
trash/zig/: test.zig
trash/zig/app/: test.tsx
trash/zig/components/: comp.tsx
trash/zig/components/icons/: ArrowRight .tsx  Checkmark .tsx
(+1019 files in other folders)
