[package]
name = "dx"
version = "0.1.0"
edition = "2021"
description = "dx - enhance your developement experience!"
repository = "https://github.com/manfromexistence/dx"
license = "MIT"
readme = "./README.md"
documentation = "https://docs.rs/inquire"
homepage = "https://github.com/manfromexistence/dx"
authors = ["manfromexistence <robinjusticeleague@gmail.com>"]
keywords = ["friday", "forge", "dx", "dx-css", "dx-auth"]
categories = ["command-line-interface", "value-formatting"]
include = ["/examples", "/src"]
rust-version = "1.66.0"

[features]
default = ["macros", "crossterm", "one-liners", "fuzzy"]
macros = []
one-liners = []
fuzzy = ["fuzzy-matcher"]
date = []
editor = []
chrono = []
crossterm = ["dep:crossterm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# notify = "8.1.0"
# tokio = { version = "1.46.1", features = ["full"] }
# anyhow = "1.0.98"
# thiserror = "2.0.12"
# futures = "0.3.31"
# gix = "0.73.0"
crossterm = { version = "0.25", optional = true }
fuzzy-matcher = { version = "0.3.7", default-features = false, optional = true }
termion = { version = "2.0", optional = true }
# crossterm = "0.25"
# termion = "2.0"
# fuzzy-matcher = "0.3.7"
bitflags = "2"
dyn-clone = "1"
once_cell = "1.18.0"
unicode-segmentation = "1"
unicode-width = "0.1"
fxhash = "0.2"
tempfile = "3.20.0"
chrono = "0.4.1"
syntect = "5.2.0"
similar = "2.5.0"
lazy_static = "1.4.0"
figlet-rs = "0.1.5"
lolcrab = "0.4.1"
console = { version = "0.15", optional = true, features = [
  "windows-console-colors",
]}
ratatui = "0.29.0"
tree-sitter = "0.22.6"
tree-sitter-highlight = "0.22.6"
tree-sitter-rust = "0.21.0"
ansi_term = "0.12.1"
rayon = "1.10.0"
comfy-table = "7.1.4"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3.31"

[dev-dependencies]
rstest = "0.18.2"
chrono = { version = "0.4.1" }

[build-dependencies]
cc = "1.0"
